# MotifQu

./: .gitignore  CHANGELOG.md  README.md  paper.bib  paper.md  pyproject.toml
.github/workflows/: pypi-publish.yml
output/: discovered_motifs.csv  results.json  summary_report.txt
src/motifqu/: cli.py  discovery.py  grover.py  ibm_backend.py
